parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    CATCH
    COMPANION
    CONSTRUCTOR
    CONTAINS
    CROSSINLINE
    DATA
    ELVIS
    ENUM
    EXTENDS
    FILTER
    FINAL
    FINALLY
    IMPLEMENTS
    INDICES
    INIT
    INLINE
    INNER
    INTERFACE
    INTERNAL
    LATEINIT
    MODULO
    NOINLINE
    OBJECT
    OPEN
    OUT
    OVERRIDE
    PRIVATE
    PROTECTED
    PUBLIC
    QUESTION
    RANGE
    REIFIED
    SEALED
    SEMICOLON
    SUM
    SUPER
    THIS
    TRY
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement_list -> <empty>
Rule 5     statement -> declaration
Rule 6     statement -> function_def
Rule 7     statement -> class_def
Rule 8     statement -> for_loop
Rule 9     statement -> when_stmt
Rule 10    statement -> print_stmt
Rule 11    statement -> return_stmt
Rule 12    statement -> break_stmt
Rule 13    statement -> continue_stmt
Rule 14    statement -> if_else
Rule 15    statement -> expression_stmt
Rule 16    declaration -> VAR ID ASSIGN expression
Rule 17    declaration -> VAL ID ASSIGN expression
Rule 18    declaration -> VAR ID COLON type ASSIGN expression
Rule 19    declaration -> VAL ID COLON type ASSIGN expression
Rule 20    param_list_opt -> param_list
Rule 21    param_list_opt -> <empty>
Rule 22    param_list -> param_list COMMA param
Rule 23    param_list -> param
Rule 24    param -> ID COLON type
Rule 25    type -> TYPE_INT
Rule 26    type -> TYPE_DOUBLE
Rule 27    type -> TYPE_BOOLEAN
Rule 28    type -> TYPE_STRING
Rule 29    type -> ID
Rule 30    return_stmt -> RETURN expression
Rule 31    for_loop -> FOR LPAREN ID IN expression RPAREN loop_body
Rule 32    loop_body -> block
Rule 33    loop_body -> statement
Rule 34    expression -> MAPOF LPAREN map_entries RPAREN
Rule 35    map_entries -> map_entries COMMA map_entry
Rule 36    map_entries -> map_entry
Rule 37    map_entry -> expression TO expression
Rule 38    expression -> ID LPAREN expression_list RPAREN
Rule 39    expression -> expression LBRACKET expression RBRACKET
Rule 40    expression -> expression DOT ID
Rule 41    expression -> expression PLUS expression
Rule 42    expression -> expression MINUS expression
Rule 43    expression -> expression MULTIPLY expression
Rule 44    expression -> expression DIVIDE expression
Rule 45    expression -> expression LESS expression
Rule 46    expression -> expression GREATER expression
Rule 47    expression -> expression LESS_EQUAL expression
Rule 48    expression -> expression GREATER_EQUAL expression
Rule 49    expression -> expression EQUALS expression
Rule 50    expression -> expression NOT_EQUALS expression
Rule 51    expression -> expression AND expression
Rule 52    expression -> expression OR expression
Rule 53    expression -> MINUS expression
Rule 54    expression -> LPAREN expression RPAREN
Rule 55    expression -> NUMBER_INT
Rule 56    expression -> NUMBER_DOUBLE
Rule 57    expression -> STRING
Rule 58    expression -> BOOLEAN_TRUE
Rule 59    expression -> BOOLEAN_FALSE
Rule 60    expression -> ID
Rule 61    print_stmt -> PRINTLN LPAREN expression RPAREN
Rule 62    print_stmt -> PRINT LPAREN expression RPAREN
Rule 63    block -> LBRACE statement_list RBRACE
Rule 64    expression_stmt -> expression
Rule 65    expression -> LISTOF LPAREN expression_list RPAREN
Rule 66    expression_list -> expression_list COMMA expression
Rule 67    expression_list -> expression
Rule 68    expression_list -> <empty>
Rule 69    when_stmt -> WHEN LPAREN expression RPAREN LBRACE when_branches RBRACE
Rule 70    when_branches -> when_branches when_branch
Rule 71    when_branches -> when_branch
Rule 72    when_branch -> expression ARROW statement_list
Rule 73    when_branch -> ELSE ARROW statement_list
Rule 74    when_stmt -> WHEN LBRACE when_branches RBRACE
Rule 75    when_branch -> expression block
Rule 76    when_branch -> ELSE block
Rule 77    class_def -> CLASS ID LBRACE class_body RBRACE
Rule 78    class_body -> class_body class_member
Rule 79    class_body -> class_member
Rule 80    class_body -> <empty>
Rule 81    class_member -> property_def
Rule 82    class_member -> method_def
Rule 83    property_def -> VAR ID COLON type
Rule 84    property_def -> VAL ID COLON type
Rule 85    property_def -> VAR ID COLON type ASSIGN expression
Rule 86    property_def -> VAL ID COLON type ASSIGN expression
Rule 87    method_def -> FUN ID LPAREN param_list_opt RPAREN block
Rule 88    function_def -> FUN ID LPAREN param_list_opt RPAREN COLON type block
Rule 89    function_def -> FUN ID LPAREN param_list_opt RPAREN block
Rule 90    break_stmt -> BREAK
Rule 91    continue_stmt -> CONTINUE
Rule 92    expression -> ARRAYOF LPAREN expression_list RPAREN
Rule 93    if_else -> IF LPAREN expression RPAREN block ELSE block
Rule 94    if_else -> IF LPAREN expression RPAREN block
Rule 95    expression -> READLINE LPAREN RPAREN

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 51
ARRAYOF              : 92
ARROW                : 72 73
ASSIGN               : 16 17 18 19 85 86
BOOLEAN_FALSE        : 59
BOOLEAN_TRUE         : 58
BREAK                : 90
CATCH                : 
CLASS                : 77
COLON                : 18 19 24 83 84 85 86 88
COMMA                : 22 35 66
COMPANION            : 
CONSTRUCTOR          : 
CONTAINS             : 
CONTINUE             : 91
CROSSINLINE          : 
DATA                 : 
DIVIDE               : 44
DOT                  : 40
ELSE                 : 73 76 93
ELVIS                : 
ENUM                 : 
EQUALS               : 49
EXTENDS              : 
FILTER               : 
FINAL                : 
FINALLY              : 
FOR                  : 31
FUN                  : 87 88 89
GREATER              : 46
GREATER_EQUAL        : 48
ID                   : 16 17 18 19 24 29 31 38 40 60 77 83 84 85 86 87 88 89
IF                   : 93 94
IMPLEMENTS           : 
IN                   : 31
INDICES              : 
INIT                 : 
INLINE               : 
INNER                : 
INTERFACE            : 
INTERNAL             : 
LATEINIT             : 
LBRACE               : 63 69 74 77
LBRACKET             : 39
LESS                 : 45
LESS_EQUAL           : 47
LISTOF               : 65
LPAREN               : 31 34 38 54 61 62 65 69 87 88 89 92 93 94 95
MAPOF                : 34
MINUS                : 42 53
MODULO               : 
MULTIPLY             : 43
NOINLINE             : 
NOT_EQUALS           : 50
NUMBER_DOUBLE        : 56
NUMBER_INT           : 55
OBJECT               : 
OPEN                 : 
OR                   : 52
OUT                  : 
OVERRIDE             : 
PLUS                 : 41
PRINT                : 62
PRINTLN              : 61
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
QUESTION             : 
RANGE                : 
RBRACE               : 63 69 74 77
RBRACKET             : 39
READLINE             : 95
REIFIED              : 
RETURN               : 30
RPAREN               : 31 34 38 54 61 62 65 69 87 88 89 92 93 94 95
SEALED               : 
SEMICOLON            : 
STRING               : 57
SUM                  : 
SUPER                : 
THIS                 : 
TO                   : 37
TRY                  : 
TYPE_BOOLEAN         : 27
TYPE_DOUBLE          : 26
TYPE_INT             : 25
TYPE_STRING          : 28
VAL                  : 17 19 84 86
VAR                  : 16 18 83 85
WHEN                 : 69 74
WHILE                : 
error                : 

Nonterminals, with rules where they appear

block                : 32 75 76 87 88 89 93 93 94
break_stmt           : 12
class_body           : 77 78
class_def            : 7
class_member         : 78 79
continue_stmt        : 13
declaration          : 5
expression           : 16 17 18 19 30 31 37 37 39 39 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 54 61 62 64 66 67 69 72 75 85 86 93 94
expression_list      : 38 65 66 92
expression_stmt      : 15
for_loop             : 8
function_def         : 6
if_else              : 14
loop_body            : 31
map_entries          : 34 35
map_entry            : 35 36
method_def           : 82
param                : 22 23
param_list           : 20 22
param_list_opt       : 87 88 89
print_stmt           : 10
program              : 0
property_def         : 81
return_stmt          : 11
statement            : 2 3 33
statement_list       : 1 2 63 72 73
type                 : 18 19 24 83 84 85 86 88
when_branch          : 70 71
when_branches        : 69 70 74
when_stmt            : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement_list -> .
    (5) statement -> . declaration
    (6) statement -> . function_def
    (7) statement -> . class_def
    (8) statement -> . for_loop
    (9) statement -> . when_stmt
    (10) statement -> . print_stmt
    (11) statement -> . return_stmt
    (12) statement -> . break_stmt
    (13) statement -> . continue_stmt
    (14) statement -> . if_else
    (15) statement -> . expression_stmt
    (16) declaration -> . VAR ID ASSIGN expression
    (17) declaration -> . VAL ID ASSIGN expression
    (18) declaration -> . VAR ID COLON type ASSIGN expression
    (19) declaration -> . VAL ID COLON type ASSIGN expression
    (88) function_def -> . FUN ID LPAREN param_list_opt RPAREN COLON type block
    (89) function_def -> . FUN ID LPAREN param_list_opt RPAREN block
    (77) class_def -> . CLASS ID LBRACE class_body RBRACE
    (31) for_loop -> . FOR LPAREN ID IN expression RPAREN loop_body
    (69) when_stmt -> . WHEN LPAREN expression RPAREN LBRACE when_branches RBRACE
    (74) when_stmt -> . WHEN LBRACE when_branches RBRACE
    (61) print_stmt -> . PRINTLN LPAREN expression RPAREN
    (62) print_stmt -> . PRINT LPAREN expression RPAREN
    (30) return_stmt -> . RETURN expression
    (90) break_stmt -> . BREAK
    (91) continue_stmt -> . CONTINUE
    (93) if_else -> . IF LPAREN expression RPAREN block ELSE block
    (94) if_else -> . IF LPAREN expression RPAREN block
    (64) expression_stmt -> . expression
    (34) expression -> . MAPOF LPAREN map_entries RPAREN
    (38) expression -> . ID LPAREN expression_list RPAREN
    (39) expression -> . expression LBRACKET expression RBRACKET
    (40) expression -> . expression DOT ID
    (41) expression -> . expression PLUS expression
    (42) expression -> . expression MINUS expression
    (43) expression -> . expression MULTIPLY expression
    (44) expression -> . expression DIVIDE expression
    (45) expression -> . expression LESS expression
    (46) expression -> . expression GREATER expression
    (47) expression -> . expression LESS_EQUAL expression
    (48) expression -> . expression GREATER_EQUAL expression
    (49) expression -> . expression EQUALS expression
    (50) expression -> . expression NOT_EQUALS expression
    (51) expression -> . expression AND expression
    (52) expression -> . expression OR expression
    (53) expression -> . MINUS expression
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . NUMBER_INT
    (56) expression -> . NUMBER_DOUBLE
    (57) expression -> . STRING
    (58) expression -> . BOOLEAN_TRUE
    (59) expression -> . BOOLEAN_FALSE
    (60) expression -> . ID
    (65) expression -> . LISTOF LPAREN expression_list RPAREN
    (92) expression -> . ARRAYOF LPAREN expression_list RPAREN
    (95) expression -> . READLINE LPAREN RPAREN

  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for VAL resolved as shift
  ! shift/reduce conflict for FUN resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHEN resolved as shift
  ! shift/reduce conflict for PRINTLN resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for MAPOF resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NUMBER_INT resolved as shift
  ! shift/reduce conflict for NUMBER_DOUBLE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN_TRUE resolved as shift
  ! shift/reduce conflict for BOOLEAN_FALSE resolved as shift
  ! shift/reduce conflict for LISTOF resolved as shift
  ! shift/reduce conflict for ARRAYOF resolved as shift
  ! shift/reduce conflict for READLINE resolved as shift
    $end            reduce using rule 4 (statement_list -> .)
    VAR             shift and go to state 15
    VAL             shift and go to state 18
    FUN             shift and go to state 19
    CLASS           shift and go to state 21
    FOR             shift and go to state 22
    WHEN            shift and go to state 23
    PRINTLN         shift and go to state 24
    PRINT           shift and go to state 25
    RETURN          shift and go to state 26
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    IF              shift and go to state 29
    MAPOF           shift and go to state 30
    ID              shift and go to state 16
    MINUS           shift and go to state 31
    LPAREN          shift and go to state 20
    NUMBER_INT      shift and go to state 32
    NUMBER_DOUBLE   shift and go to state 33
    STRING          shift and go to state 34
    BOOLEAN_TRUE    shift and go to state 35
    BOOLEAN_FALSE   shift and go to state 36
    LISTOF          shift and go to state 37
    ARRAYOF         shift and go to state 38
    READLINE        shift and go to state 39

  ! VAR             [ reduce using rule 4 (statement_list -> .) ]
  ! VAL             [ reduce using rule 4 (statement_list -> .) ]
  ! FUN             [ reduce using rule 4 (statement_list -> .) ]
  ! CLASS           [ reduce using rule 4 (statement_list -> .) ]
  ! FOR             [ reduce using rule 4 (statement_list -> .) ]
  ! WHEN            [ reduce using rule 4 (statement_list -> .) ]
  ! PRINTLN         [ reduce using rule 4 (statement_list -> .) ]
  ! PRINT           [ reduce using rule 4 (statement_list -> .) ]
  ! RETURN          [ reduce using rule 4 (statement_list -> .) ]
  ! BREAK           [ reduce using rule 4 (statement_list -> .) ]
  ! CONTINUE        [ reduce using rule 4 (statement_list -> .) ]
  ! IF              [ reduce using rule 4 (statement_list -> .) ]
  ! MAPOF           [ reduce using rule 4 (statement_list -> .) ]
  ! ID              [ reduce using rule 4 (statement_list -> .) ]
  ! MINUS           [ reduce using rule 4 (statement_list -> .) ]
  ! LPAREN          [ reduce using rule 4 (statement_list -> .) ]
  ! NUMBER_INT      [ reduce using rule 4 (statement_list -> .) ]
  ! NUMBER_DOUBLE   [ reduce using rule 4 (statement_list -> .) ]
  ! STRING          [ reduce using rule 4 (statement_list -> .) ]
  ! BOOLEAN_TRUE    [ reduce using rule 4 (statement_list -> .) ]
  ! BOOLEAN_FALSE   [ reduce using rule 4 (statement_list -> .) ]
  ! LISTOF          [ reduce using rule 4 (statement_list -> .) ]
  ! ARRAYOF         [ reduce using rule 4 (statement_list -> .) ]
  ! READLINE        [ reduce using rule 4 (statement_list -> .) ]

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    function_def                   shift and go to state 5
    class_def                      shift and go to state 6
    for_loop                       shift and go to state 7
    when_stmt                      shift and go to state 8
    print_stmt                     shift and go to state 9
    return_stmt                    shift and go to state 10
    break_stmt                     shift and go to state 11
    continue_stmt                  shift and go to state 12
    if_else                        shift and go to state 13
    expression_stmt                shift and go to state 14
    expression                     shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (5) statement -> . declaration
    (6) statement -> . function_def
    (7) statement -> . class_def
    (8) statement -> . for_loop
    (9) statement -> . when_stmt
    (10) statement -> . print_stmt
    (11) statement -> . return_stmt
    (12) statement -> . break_stmt
    (13) statement -> . continue_stmt
    (14) statement -> . if_else
    (15) statement -> . expression_stmt
    (16) declaration -> . VAR ID ASSIGN expression
    (17) declaration -> . VAL ID ASSIGN expression
    (18) declaration -> . VAR ID COLON type ASSIGN expression
    (19) declaration -> . VAL ID COLON type ASSIGN expression
    (88) function_def -> . FUN ID LPAREN param_list_opt RPAREN COLON type block
    (89) function_def -> . FUN ID LPAREN param_list_opt RPAREN block
    (77) class_def -> . CLASS ID LBRACE class_body RBRACE
    (31) for_loop -> . FOR LPAREN ID IN expression RPAREN loop_body
    (69) when_stmt -> . WHEN LPAREN expression RPAREN LBRACE when_branches RBRACE
    (74) when_stmt -> . WHEN LBRACE when_branches RBRACE
    (61) print_stmt -> . PRINTLN LPAREN expression RPAREN
    (62) print_stmt -> . PRINT LPAREN expression RPAREN
    (30) return_stmt -> . RETURN expression
    (90) break_stmt -> . BREAK
    (91) continue_stmt -> . CONTINUE
    (93) if_else -> . IF LPAREN expression RPAREN block ELSE block
    (94) if_else -> . IF LPAREN expression RPAREN block
    (64) expression_stmt -> . expression
    (34) expression -> . MAPOF LPAREN map_entries RPAREN
    (38) expression -> . ID LPAREN expression_list RPAREN
    (39) expression -> . expression LBRACKET expression RBRACKET
    (40) expression -> . expression DOT ID
    (41) expression -> . expression PLUS expression
    (42) expression -> . expression MINUS expression
    (43) expression -> . expression MULTIPLY expression
    (44) expression -> . expression DIVIDE expression
    (45) expression -> . expression LESS expression
    (46) expression -> . expression GREATER expression
    (47) expression -> . expression LESS_EQUAL expression
    (48) expression -> . expression GREATER_EQUAL expression
    (49) expression -> . expression EQUALS expression
    (50) expression -> . expression NOT_EQUALS expression
    (51) expression -> . expression AND expression
    (52) expression -> . expression OR expression
    (53) expression -> . MINUS expression
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . NUMBER_INT
    (56) expression -> . NUMBER_DOUBLE
    (57) expression -> . STRING
    (58) expression -> . BOOLEAN_TRUE
    (59) expression -> . BOOLEAN_FALSE
    (60) expression -> . ID
    (65) expression -> . LISTOF LPAREN expression_list RPAREN
    (92) expression -> . ARRAYOF LPAREN expression_list RPAREN
    (95) expression -> . READLINE LPAREN RPAREN

    $end            reduce using rule 1 (program -> statement_list .)
    VAR             shift and go to state 15
    VAL             shift and go to state 18
    FUN             shift and go to state 19
    CLASS           shift and go to state 21
    FOR             shift and go to state 22
    WHEN            shift and go to state 23
    PRINTLN         shift and go to state 24
    PRINT           shift and go to state 25
    RETURN          shift and go to state 26
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    IF              shift and go to state 29
    MAPOF           shift and go to state 30
    ID              shift and go to state 16
    MINUS           shift and go to state 31
    LPAREN          shift and go to state 20
    NUMBER_INT      shift and go to state 32
    NUMBER_DOUBLE   shift and go to state 33
    STRING          shift and go to state 34
    BOOLEAN_TRUE    shift and go to state 35
    BOOLEAN_FALSE   shift and go to state 36
    LISTOF          shift and go to state 37
    ARRAYOF         shift and go to state 38
    READLINE        shift and go to state 39

    statement                      shift and go to state 40
    declaration                    shift and go to state 4
    function_def                   shift and go to state 5
    class_def                      shift and go to state 6
    for_loop                       shift and go to state 7
    when_stmt                      shift and go to state 8
    print_stmt                     shift and go to state 9
    return_stmt                    shift and go to state 10
    break_stmt                     shift and go to state 11
    continue_stmt                  shift and go to state 12
    if_else                        shift and go to state 13
    expression_stmt                shift and go to state 14
    expression                     shift and go to state 17

state 3

    (3) statement_list -> statement .

    VAR             reduce using rule 3 (statement_list -> statement .)
    VAL             reduce using rule 3 (statement_list -> statement .)
    FUN             reduce using rule 3 (statement_list -> statement .)
    CLASS           reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    WHEN            reduce using rule 3 (statement_list -> statement .)
    PRINTLN         reduce using rule 3 (statement_list -> statement .)
    PRINT           reduce using rule 3 (statement_list -> statement .)
    RETURN          reduce using rule 3 (statement_list -> statement .)
    BREAK           reduce using rule 3 (statement_list -> statement .)
    CONTINUE        reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    MAPOF           reduce using rule 3 (statement_list -> statement .)
    ID              reduce using rule 3 (statement_list -> statement .)
    MINUS           reduce using rule 3 (statement_list -> statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement .)
    NUMBER_INT      reduce using rule 3 (statement_list -> statement .)
    NUMBER_DOUBLE   reduce using rule 3 (statement_list -> statement .)
    STRING          reduce using rule 3 (statement_list -> statement .)
    BOOLEAN_TRUE    reduce using rule 3 (statement_list -> statement .)
    BOOLEAN_FALSE   reduce using rule 3 (statement_list -> statement .)
    LISTOF          reduce using rule 3 (statement_list -> statement .)
    ARRAYOF         reduce using rule 3 (statement_list -> statement .)
    READLINE        reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)
    ELSE            reduce using rule 3 (statement_list -> statement .)


state 4

    (5) statement -> declaration .

    VAR             reduce using rule 5 (statement -> declaration .)
    VAL             reduce using rule 5 (statement -> declaration .)
    FUN             reduce using rule 5 (statement -> declaration .)
    CLASS           reduce using rule 5 (statement -> declaration .)
    FOR             reduce using rule 5 (statement -> declaration .)
    WHEN            reduce using rule 5 (statement -> declaration .)
    PRINTLN         reduce using rule 5 (statement -> declaration .)
    PRINT           reduce using rule 5 (statement -> declaration .)
    RETURN          reduce using rule 5 (statement -> declaration .)
    BREAK           reduce using rule 5 (statement -> declaration .)
    CONTINUE        reduce using rule 5 (statement -> declaration .)
    IF              reduce using rule 5 (statement -> declaration .)
    MAPOF           reduce using rule 5 (statement -> declaration .)
    ID              reduce using rule 5 (statement -> declaration .)
    MINUS           reduce using rule 5 (statement -> declaration .)
    LPAREN          reduce using rule 5 (statement -> declaration .)
    NUMBER_INT      reduce using rule 5 (statement -> declaration .)
    NUMBER_DOUBLE   reduce using rule 5 (statement -> declaration .)
    STRING          reduce using rule 5 (statement -> declaration .)
    BOOLEAN_TRUE    reduce using rule 5 (statement -> declaration .)
    BOOLEAN_FALSE   reduce using rule 5 (statement -> declaration .)
    LISTOF          reduce using rule 5 (statement -> declaration .)
    ARRAYOF         reduce using rule 5 (statement -> declaration .)
    READLINE        reduce using rule 5 (statement -> declaration .)
    $end            reduce using rule 5 (statement -> declaration .)
    RBRACE          reduce using rule 5 (statement -> declaration .)
    ELSE            reduce using rule 5 (statement -> declaration .)


state 5

    (6) statement -> function_def .

    VAR             reduce using rule 6 (statement -> function_def .)
    VAL             reduce using rule 6 (statement -> function_def .)
    FUN             reduce using rule 6 (statement -> function_def .)
    CLASS           reduce using rule 6 (statement -> function_def .)
    FOR             reduce using rule 6 (statement -> function_def .)
    WHEN            reduce using rule 6 (statement -> function_def .)
    PRINTLN         reduce using rule 6 (statement -> function_def .)
    PRINT           reduce using rule 6 (statement -> function_def .)
    RETURN          reduce using rule 6 (statement -> function_def .)
    BREAK           reduce using rule 6 (statement -> function_def .)
    CONTINUE        reduce using rule 6 (statement -> function_def .)
    IF              reduce using rule 6 (statement -> function_def .)
    MAPOF           reduce using rule 6 (statement -> function_def .)
    ID              reduce using rule 6 (statement -> function_def .)
    MINUS           reduce using rule 6 (statement -> function_def .)
    LPAREN          reduce using rule 6 (statement -> function_def .)
    NUMBER_INT      reduce using rule 6 (statement -> function_def .)
    NUMBER_DOUBLE   reduce using rule 6 (statement -> function_def .)
    STRING          reduce using rule 6 (statement -> function_def .)
    BOOLEAN_TRUE    reduce using rule 6 (statement -> function_def .)
    BOOLEAN_FALSE   reduce using rule 6 (statement -> function_def .)
    LISTOF          reduce using rule 6 (statement -> function_def .)
    ARRAYOF         reduce using rule 6 (statement -> function_def .)
    READLINE        reduce using rule 6 (statement -> function_def .)
    $end            reduce using rule 6 (statement -> function_def .)
    RBRACE          reduce using rule 6 (statement -> function_def .)
    ELSE            reduce using rule 6 (statement -> function_def .)


state 6

    (7) statement -> class_def .

    VAR             reduce using rule 7 (statement -> class_def .)
    VAL             reduce using rule 7 (statement -> class_def .)
    FUN             reduce using rule 7 (statement -> class_def .)
    CLASS           reduce using rule 7 (statement -> class_def .)
    FOR             reduce using rule 7 (statement -> class_def .)
    WHEN            reduce using rule 7 (statement -> class_def .)
    PRINTLN         reduce using rule 7 (statement -> class_def .)
    PRINT           reduce using rule 7 (statement -> class_def .)
    RETURN          reduce using rule 7 (statement -> class_def .)
    BREAK           reduce using rule 7 (statement -> class_def .)
    CONTINUE        reduce using rule 7 (statement -> class_def .)
    IF              reduce using rule 7 (statement -> class_def .)
    MAPOF           reduce using rule 7 (statement -> class_def .)
    ID              reduce using rule 7 (statement -> class_def .)
    MINUS           reduce using rule 7 (statement -> class_def .)
    LPAREN          reduce using rule 7 (statement -> class_def .)
    NUMBER_INT      reduce using rule 7 (statement -> class_def .)
    NUMBER_DOUBLE   reduce using rule 7 (statement -> class_def .)
    STRING          reduce using rule 7 (statement -> class_def .)
    BOOLEAN_TRUE    reduce using rule 7 (statement -> class_def .)
    BOOLEAN_FALSE   reduce using rule 7 (statement -> class_def .)
    LISTOF          reduce using rule 7 (statement -> class_def .)
    ARRAYOF         reduce using rule 7 (statement -> class_def .)
    READLINE        reduce using rule 7 (statement -> class_def .)
    $end            reduce using rule 7 (statement -> class_def .)
    RBRACE          reduce using rule 7 (statement -> class_def .)
    ELSE            reduce using rule 7 (statement -> class_def .)


state 7

    (8) statement -> for_loop .

    VAR             reduce using rule 8 (statement -> for_loop .)
    VAL             reduce using rule 8 (statement -> for_loop .)
    FUN             reduce using rule 8 (statement -> for_loop .)
    CLASS           reduce using rule 8 (statement -> for_loop .)
    FOR             reduce using rule 8 (statement -> for_loop .)
    WHEN            reduce using rule 8 (statement -> for_loop .)
    PRINTLN         reduce using rule 8 (statement -> for_loop .)
    PRINT           reduce using rule 8 (statement -> for_loop .)
    RETURN          reduce using rule 8 (statement -> for_loop .)
    BREAK           reduce using rule 8 (statement -> for_loop .)
    CONTINUE        reduce using rule 8 (statement -> for_loop .)
    IF              reduce using rule 8 (statement -> for_loop .)
    MAPOF           reduce using rule 8 (statement -> for_loop .)
    ID              reduce using rule 8 (statement -> for_loop .)
    MINUS           reduce using rule 8 (statement -> for_loop .)
    LPAREN          reduce using rule 8 (statement -> for_loop .)
    NUMBER_INT      reduce using rule 8 (statement -> for_loop .)
    NUMBER_DOUBLE   reduce using rule 8 (statement -> for_loop .)
    STRING          reduce using rule 8 (statement -> for_loop .)
    BOOLEAN_TRUE    reduce using rule 8 (statement -> for_loop .)
    BOOLEAN_FALSE   reduce using rule 8 (statement -> for_loop .)
    LISTOF          reduce using rule 8 (statement -> for_loop .)
    ARRAYOF         reduce using rule 8 (statement -> for_loop .)
    READLINE        reduce using rule 8 (statement -> for_loop .)
    $end            reduce using rule 8 (statement -> for_loop .)
    RBRACE          reduce using rule 8 (statement -> for_loop .)
    ELSE            reduce using rule 8 (statement -> for_loop .)


state 8

    (9) statement -> when_stmt .

    VAR             reduce using rule 9 (statement -> when_stmt .)
    VAL             reduce using rule 9 (statement -> when_stmt .)
    FUN             reduce using rule 9 (statement -> when_stmt .)
    CLASS           reduce using rule 9 (statement -> when_stmt .)
    FOR             reduce using rule 9 (statement -> when_stmt .)
    WHEN            reduce using rule 9 (statement -> when_stmt .)
    PRINTLN         reduce using rule 9 (statement -> when_stmt .)
    PRINT           reduce using rule 9 (statement -> when_stmt .)
    RETURN          reduce using rule 9 (statement -> when_stmt .)
    BREAK           reduce using rule 9 (statement -> when_stmt .)
    CONTINUE        reduce using rule 9 (statement -> when_stmt .)
    IF              reduce using rule 9 (statement -> when_stmt .)
    MAPOF           reduce using rule 9 (statement -> when_stmt .)
    ID              reduce using rule 9 (statement -> when_stmt .)
    MINUS           reduce using rule 9 (statement -> when_stmt .)
    LPAREN          reduce using rule 9 (statement -> when_stmt .)
    NUMBER_INT      reduce using rule 9 (statement -> when_stmt .)
    NUMBER_DOUBLE   reduce using rule 9 (statement -> when_stmt .)
    STRING          reduce using rule 9 (statement -> when_stmt .)
    BOOLEAN_TRUE    reduce using rule 9 (statement -> when_stmt .)
    BOOLEAN_FALSE   reduce using rule 9 (statement -> when_stmt .)
    LISTOF          reduce using rule 9 (statement -> when_stmt .)
    ARRAYOF         reduce using rule 9 (statement -> when_stmt .)
    READLINE        reduce using rule 9 (statement -> when_stmt .)
    $end            reduce using rule 9 (statement -> when_stmt .)
    RBRACE          reduce using rule 9 (statement -> when_stmt .)
    ELSE            reduce using rule 9 (statement -> when_stmt .)


state 9

    (10) statement -> print_stmt .

    VAR             reduce using rule 10 (statement -> print_stmt .)
    VAL             reduce using rule 10 (statement -> print_stmt .)
    FUN             reduce using rule 10 (statement -> print_stmt .)
    CLASS           reduce using rule 10 (statement -> print_stmt .)
    FOR             reduce using rule 10 (statement -> print_stmt .)
    WHEN            reduce using rule 10 (statement -> print_stmt .)
    PRINTLN         reduce using rule 10 (statement -> print_stmt .)
    PRINT           reduce using rule 10 (statement -> print_stmt .)
    RETURN          reduce using rule 10 (statement -> print_stmt .)
    BREAK           reduce using rule 10 (statement -> print_stmt .)
    CONTINUE        reduce using rule 10 (statement -> print_stmt .)
    IF              reduce using rule 10 (statement -> print_stmt .)
    MAPOF           reduce using rule 10 (statement -> print_stmt .)
    ID              reduce using rule 10 (statement -> print_stmt .)
    MINUS           reduce using rule 10 (statement -> print_stmt .)
    LPAREN          reduce using rule 10 (statement -> print_stmt .)
    NUMBER_INT      reduce using rule 10 (statement -> print_stmt .)
    NUMBER_DOUBLE   reduce using rule 10 (statement -> print_stmt .)
    STRING          reduce using rule 10 (statement -> print_stmt .)
    BOOLEAN_TRUE    reduce using rule 10 (statement -> print_stmt .)
    BOOLEAN_FALSE   reduce using rule 10 (statement -> print_stmt .)
    LISTOF          reduce using rule 10 (statement -> print_stmt .)
    ARRAYOF         reduce using rule 10 (statement -> print_stmt .)
    READLINE        reduce using rule 10 (statement -> print_stmt .)
    $end            reduce using rule 10 (statement -> print_stmt .)
    RBRACE          reduce using rule 10 (statement -> print_stmt .)
    ELSE            reduce using rule 10 (statement -> print_stmt .)


state 10

    (11) statement -> return_stmt .
